--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
-    test text
+    <div class="sidebar">sidebar</div>
+    <header class="header">header</header>
+    <div class="realtors">top 3 realtors</div>
+    <section class="features"></section>
+    <div class="story__pictures">story pictures</div>
+    <div class="story__content">story content</div>
+    <section class="homes">homes</section>
+    <section class="gallery">gallery</section>
+    <footer class="footer">footer</footer>
   </body>
 </html>
